kubernetes/service.yaml

apiVersion: v1
kind: Service

metadata:
  name: enterprise-service
  namespace: enterprise-devops

spec:
  selector:
    app: enterprise-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: LoadBalancer
